--- a/admin/index.html
+++ b/admin/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="" />
-    <link rel="shortcut icon" href="https://play.google.com/store/apps/details?id=com.vginfotec.moviebooking" type="image/x-icon">
+    <link rel="shortcut icon" href="https://play-lh.googleusercontent.com/2aBRW_JMiVC723ml-vN2Y8ChNCS5TyZenq0rdIgKG_kE_dSe3MFsVK92qSvrVQHzevnL" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin</title>
   </head>
